new page button works now and added in adapter class. Added the interface to each fragment to activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="newPage">New Page</string>
     <string name="runTimeException_browser_control">Please implement webPageInterface to attach BrowserControl Fragment</string>
     <string name="runTimeException_page_list">Please implement webPageInterface to attach PageList Fragment</string>
+    <string name="runTimeException_pagerView">Please implement webPageInterface to attach PagerViewer Fragment</string>
 </resources>
