--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,20 +5,17 @@
     <string name="go">Go</string>
     <string name="back">Back</string>
     <string name="next">Next</string>
-    <string name="runTimeException_control">"Please implement webPageInterface to attach PageControl fragment"</string>
-    <string name="runTimeException_view">"Please implement webPageInterface to attach PageViewer fragment"</string>
+    <string name="runTimeException_control">"Please implement ControlInterface to attach PageControl fragment"</string>
     <string name="newPage">New Page</string>
-    <string name="runTimeException_browser_control">Please implement webPageInterface to attach BrowserControl Fragment</string>
-    <string name="runTimeException_page_list">Please implement listInterface to attach PageList Fragment</string>
-    <string name="runTimeException_pagerView">Please implement webPageInterface to attach PagerViewer Fragment</string>
-    <string name="runTimeException_pager">Please implement pagerInterface to attach Pager Fragment</string>
-    <string name="google">https://www.google.com</string>
+    <string name="runTimeException_browser_control">Please implement BrowserInterface to attach BrowserControl Fragment</string>
+    <string name="runTimeException_browser_controlBM">Please implement BookMarkInterface to attach BrowserControl Fragment</string>
     <string name="bookmark">Bookmarks</string>
     <string name="saveBookMark">Save</string>
     <string name="deleteBtn">Delete</string>
+    <string name="deleteTitle">Delete Bookmark</string>
     <string name="saveBookMarkClick">Bookmark saved</string>
-    <string name="deleteMsg">Are you sure you want to delete?</string>
-    <string name="close">Close Bookmark</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="deleteMsg">Are you sure you want to delete this Bookmark?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="bookmarkDeleted">Bookmark Deleted</string>
 </resources>
