Added menu share button. Functions, but needs to show current web page instead of hardcoded url.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="bookmarkDeleted">Bookmark Deleted</string>
+    <string name="share">Share</string>
 </resources>
